--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <h1>Ella Siegenthaler</h1>
 <p>Welcome to this website.</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/UcFlSIVeqf8" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
-  <img src="A1.jpg"/>
+  <img src="A1.JPG"/>
 </body>
 </html>
