--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head>header {
+    background-color:blue;
+    color:black;
+    text-align:center;
+    padding:5px;	 
+} 
 <title>Siegenthaler</title
 </head>
 <body>
