--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>header {
-    background-color:blue;
+<head>
+    <style>
+    {background-color:blue;
     color:black;
     text-align:center;
-    padding:5px;	 
-} 
+        padding:5px;}	  
 <title>Siegenthaler</title
 </head>
 <body>
