--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>	  
-<title>Siegenthaler</title
+  <title>Siegenthaler</title>
 </head>
 <body>
 <h1>Ella Siegenthaler</h1>
