--- a/me.html
+++ b/me.html
@@ -1,3 +1,13 @@
 <!DOCTYPE html>
 <html>
-<title>About Me </title>
+<head>
+<title>About Me</title>
+</head>
+<style>
+  h1 {font-family:times new roman;font-size:200%;text-align:center;}
+  h2 {font-family:times new roman;font-size:150%;text-align:center;}
+  p{font-family:times new roman;font-size:75%;text-align:center;}
+</style>
+  <h1>About ME</h1>
+  <h2>Ella Siegenthaler</h2>
+  <p>My name is Ella Siegenthaler and I am a sophmore at Western Reserve Academy.</p>
