--- a/me.html
+++ b/me.html
@@ -5,9 +5,9 @@
 </head>
 <style>
   h1 {font-family:times new roman;font-size:200%;text-align:center;}
-  h2 {font-family:times new roman;font-size:150%;text-align:center;}
-  p{font-family:times new roman;font-size:75%;text-align:center;}
+  h2 {font-family:times new roman;font-size:125%;text-align:center;}
+  p{font-family:times new roman;font-size:100%;text-align:center;}
 </style>
   <h1>About ME</h1>
   <h2>Ella Siegenthaler</h2>
-  <p>My name is Ella Siegenthaler and I am a sophmore at Western Reserve Academy.</p>
+  <p>My name is Ella Siegenthaler and I am a sophmore at Western Reserve Academy. I enjoy golfing and spending time with my beloved dogs, Louis and Leo. I am a supporter of the Cleveland Indians, New England Patriots, and the Boston Bruins. Thank you for taking the time to look at my website.</p>
