--- a/me.html
+++ b/me.html
@@ -4,6 +4,7 @@
 <title>About Me</title>
 </head>
 <style>
+  header{background-color:midnightblue;color:ivory;text-align:center;padding;5px}
   h1 {font-family:times new roman;font-size:200%;text-align:center;}
   h2 {font-family:times new roman;font-size:125%;text-align:center;}
   p{font-family:times new roman;font-size:100%;text-align:center;}
