--- a/me.html
+++ b/me.html
@@ -4,7 +4,37 @@
 <title>About Me</title>
 </head>
 <style>
-  header{background-color:midnightblue;color:ivory;text-align:center;padding;5px}
+  header {
+    background-color:midnightblue;
+    color:ivory;
+    text-align:center;
+    padding:10px;	 
+}
+nav {
+    line-height:30px;
+    background-color:midnightblue;
+    height:150px;
+    width:150px;
+    float:left;
+    padding:49px;	      
+}
+section {
+    width:320px;
+    float:center;
+    padding:10px;	 	 
+}
+footer {
+    background-color:midnightblue;
+    color:ivory;
+    text-align:center;
+    padding:15px;	
+}
+body { background-image:url('CTIC.jpg');
+background-repeat:no-repeat;
+background-position:center;
+width="1280"; height="960";
+background-color:black;}
+
   h1 {font-family:times new roman;font-size:200%;text-align:center;}
   h2 {font-family:times new roman;font-size:125%;text-align:center;}
   p{font-family:times new roman;font-size:100%;text-align:center;}
