--- a/me.html
+++ b/me.html
@@ -29,11 +29,11 @@ footer {
     text-align:center;
     padding:15px;	
 }
-body { background-image:url('CTIC.jpg');
+body { background-color:ivory;
 background-repeat:no-repeat;
 background-position:center;
 width="1280"; height="960";
-background-color:black;}
+background-color:midnightblue;}
 
   h1 {font-family:times new roman;font-size:200%;text-align:center;}
   h2 {font-family:times new roman;font-size:125%;text-align:center;}
