--- a/me.html
+++ b/me.html
@@ -41,4 +41,6 @@ background-color:midnightblue;}
 </style>
   <h1>About ME</h1>
   <h2>Ella Siegenthaler</h2>
+  <body>
   <p>My name is Ella Siegenthaler and I am a sophmore at Western Reserve Academy. I enjoy golfing and spending time with my beloved dogs, Louis and Leo. I am a supporter of the Cleveland Indians, New England Patriots, and the Boston Bruins. Thank you for taking the time to look at my website.</p>
+  </body>
