--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <title>Siegenthaler</title>
 </head>
 <body>
+  <style>
+    h1 {font-family:times new roman;font-size:200%;text-align:center;}
 <h1>Ella Siegenthaler</h1>
 <p>Digital Fabrication and Engineering</p>
 </body>
