--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 <body>
   <style>
     h1 {font-family:times new roman;font-size:200%;text-align:center;}
-<h1>Ella Siegenthaler</h1>
-<p>Digital Fabrication and Engineering</p>
+<h1>Ella Siegenthaler - Digital Fabrication and Engineering</h1>
 </body>
 </html>
 <nav>
