--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>	  
   <title>Siegenthaler</title>
-</head>
 <body>
   <style>
     h1 {font-family:times new roman;font-size:200%;text-align:center;}
+    </style>
+    </head>
 <h1>Ella Siegenthaler - Digital Fabrication and Engineering</h1>
 <nav>
   <p>
