--- a/me.html
+++ b/me.html
@@ -40,7 +40,7 @@ background-color:midnightblue;}
   p{font-family:times new roman;font-size:100%;text-align:center;}
 </style>
 <body>
-  <h1>About ME</h1>
-  <h2>Ella Siegenthaler</h2>
-  <p>My name is Ella Siegenthaler and I am a sophmore at Western Reserve Academy. I enjoy golfing and spending time with my beloved dogs, Louis and Leo. I am a supporter of the Cleveland Indians, New England Patriots, and the Boston Bruins. Thank you for taking the time to look at my website.</p>
+  <h1 stlye="color:ivory;">About Me</h1>
+  <h2 style="color:ivory;">Ella Siegenthaler</h2>
+  <p style="color:ivory;">My name is Ella Siegenthaler and I am a sophmore at Western Reserve Academy. I enjoy golfing and spending time with my beloved dogs, Louis and Leo. I am a supporter of the Cleveland Indians, New England Patriots, and the Boston Bruins. Thank you for taking the time to look at my website.</p>
   </body>
