--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
 <nav>
   <p>
   <a href="me.html">About Me</a>
+    <a href="r1.html">Rotation 1</a>
+    <a href="r2.html">Rotation 2</a>
+    <a href="r3.html">Rotation 3</a>
+    <a href="r4.html">Rotation 4</a>
+    <a href="r5.html">Rotation 5</a>
+    <a href="r6.html">Rotation 6</a>
+    <a href="r7.html">Rotation 7</a>
+    <a href="r8.html">Rotation 8</a>
+    <a href="r9.html">Rotation 9</a>
+    <a href="r10.html">Rotation 10</a>
+    <a href="r11.html">Rotation 11</a>
+    <a href="r12.html">Rotation 12</a>
   </p>
 </body>
 </html>
