--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <body>
   <style>
     h1 {font-family:times new roman;font-size:200%;text-align:center;}
+    p {font-familt:times new roman;font-size:100%;text-align:center;}
     </style>
     </head>
 <h1>Ella Siegenthaler - Digital Fabrication and Engineering</h1>
