--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
 <h1>Ella Siegenthaler - Digital Fabrication and Engineering</h1>
 <nav>
-  <p>
+  <p style="background-color:mistyrose;">
   <a href="me.html">About Me</a>
     <a href="r1.html">Rotation 1</a>
     <a href="r2.html">Rotation 2</a>
