--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     p {font-familt:times new roman;font-size:100%;text-align:center;}
     </style>
     </head>
-<h1>Ella Siegenthaler - Digital Fabrication and Engineering</h1>
+<h1 style="color:midnightblue;">Ella Siegenthaler - Digital Fabrication and Engineering</h1>
 <nav>
   <p style="background-color:mistyrose;">
   <a href="me.html">About Me</a>
