--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
     <a href="r11.html">Rotation 11</a>
     <a href="r12.html">Rotation 12</a>
   </p>
-  <ing src="A1.jpg">
+  <img src="A1.jpg"/>
 </body>
 </html>
