--- a/index.html
+++ b/index.html
@@ -26,5 +26,9 @@
     <a href="r12.html">Rotation 12</a>
   </p>
   <img src="A1.jpg"/>
+  div {
+    width: 100%;
+    text-align: center;
+}
 </body>
 </html>
