--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   <style>
     h1 {font-family:times new roman;font-size:200%;text-align:center;}
     p {font-familt:times new roman;font-size:150%;text-align:center;}
-     
+      img {
+    width: 100%;
+    text-align:center;
+}
     </style>
     </head>
 <h1 style="color:midnightblue;">Ella Siegenthaler - Digital Fabrication and Engineering</h1>
@@ -26,10 +29,7 @@
     <a href="r11.html">Rotation 11</a>
     <a href="r12.html">Rotation 12</a>
   </p>
-  div {
-    width: 100%;
-    text-align:center;
-}
+ 
   <img src="A2.jpg"/>
 </body>
 </html>
