--- a/r3.html
+++ b/r3.html
@@ -3,3 +3,9 @@
 <title>Rotation 3</title>
 <head>
 <style>
+h1 {font-family:times new roman;font-size:200%;text-align:center;}
+  p {font-familt:times new roman;font-size:150%;text-align:center;}
+  </style>
+  </head>
+  <h1 style="color:midnightblue">Rotation 1</h1>
+  <p>Type here</p>
