--- a/r6.html
+++ b/r6.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
-<title>Rotation 1</title>
+<title>Rotation 6</title>
 <head>
 <style>
+h1 {font-family:times new roman;font-size:200%;text-align:center;}
+  p {font-familt:times new roman;font-size:150%;text-align:center;}
+  </style>
+  </head>
+  <h1 style="color:midnightblue">Rotation 1</h1>
+  <p>Type here</p>
