--- a/r1.html
+++ b/r1.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Rotation 1</title>
+<title>Rotation 1 - Principles of Digital Fabrication, Design Challenges, and HTML</title>
 <head>
 <style>
   h1 {font-family:times new roman;font-size:200%;text-align:center;}
@@ -8,4 +8,4 @@
   </style>
   </head>
   <h1 style="color:midnightblue">Rotation 1</h1>
-  <p>Type here</p>
+  <p>This website was the project!</p>
