--- a/r2.html
+++ b/r2.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Rotation 2</title>
+<title>Rotation 2 - CAD, Fusion 360, and Design</title>
 <head>
 <style>
 h1 {font-family:times new roman;font-size:200%;text-align:center;}
@@ -8,4 +8,5 @@ h1 {font-family:times new roman;font-size:200%;text-align:center;}
   </style>
   </head>
   <h1 style="color:midnightblue">Rotation 1</h1>
-  <p>Type here</p>
+  <p>For this project, I made a wax stamp with the name of my house on it. First, using Fusion 360, I designed my stamp. Next, I put text in and extruded and reversed the text so it would look normal when stamped. To get my design to the 3D priter, I put the file on a flash drive then plugged the flash drive into the printer. My stanp took about two hours to print and it turned out really well!</p>
+<img src=
