--- a/r2.html
+++ b/r2.html
@@ -9,4 +9,8 @@ h1 {font-family:times new roman;font-size:200%;text-align:center;}
   </head>
   <h1 style="color:midnightblue">Rotation 1</h1>
   <p>For this project, I made a wax stamp with the name of my house on it. First, using Fusion 360, I designed my stamp. Next, I put text in and extruded and reversed the text so it would look normal when stamped. To get my design to the 3D priter, I put the file on a flash drive then plugged the flash drive into the printer. My stanp took about two hours to print and it turned out really well!</p>
-<img src=
+<img src="stamp.jpg"/>
+  <img src="stamp3.jpg"/>
+  <img src="stamp4.jpg"/>
+  <img src="stamp5.jpg"/>
+  <img src="stamp6.jpg"/>
