--- a/r3.html
+++ b/r3.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Rotation 3</title>
+<title>Rotation 3 - Garment and Sublimation Printing</title>
 <head>
 <style>
 h1 {font-family:times new roman;font-size:200%;text-align:center;}
@@ -8,4 +8,4 @@ h1 {font-family:times new roman;font-size:200%;text-align:center;}
   </style>
   </head>
   <h1 style="color:midnightblue">Rotation 1</h1>
-  <p>Type here</p>
+  <p>For this project, I made a t-shirt and a dog bowl. To make the t-shirt, I used adobe photoshop</p>
