--- a/r3.html
+++ b/r3.html
@@ -7,5 +7,7 @@ h1 {font-family:times new roman;font-size:200%;text-align:center;}
   p {font-familt:times new roman;font-size:150%;text-align:center;}
   </style>
   </head>
-  <h1 style="color:midnightblue">Rotation 1</h1>
-  <p>For this project, I made a t-shirt and a dog bowl. To make the t-shirt, I used adobe photoshop</p>
+  <h1 style="color:midnightblue">Rotation 3</h1>
+  <b>Brother GT-361</b>
+  <p>Using the Brother GT-361, I was able to make a T-shirt. To make the design for the t-shirt, I used Adobe Photoshop to cut out a picture of Tom Brady, I then copied the picture to Corel Draw and typed above Tom Brady. I saved the final design as a jpg downloaded it onto a flash drive. Next, I grabbed a blank t-shirt and heated it so it would be flat. I then put the shirt into theBrotherGT-361 and plug my flashdrive in. My t-shirt came out with my design on it.
+  
