--- a/r3.html
+++ b/r3.html
@@ -10,4 +10,4 @@ h1 {font-family:times new roman;font-size:200%;text-align:center;}
   <h1 style="color:midnightblue">Rotation 3</h1>
   <b>Brother GT-361</b>
   <p>Using the Brother GT-361, I was able to make a T-shirt. To make the design for the t-shirt, I used Adobe Photoshop to cut out a picture of Tom Brady, I then copied the picture to Corel Draw and typed above Tom Brady. I saved the final design as a jpg downloaded it onto a flash drive. Next, I grabbed a blank t-shirt and heated it so it would be flat. I then put the shirt into theBrotherGT-361 and plug my flashdrive in. My t-shirt came out with my design on it.
-  
+  <a href="
