--- a/r3.html
+++ b/r3.html
@@ -9,5 +9,13 @@ h1 {font-family:times new roman;font-size:200%;text-align:center;}
   </head>
   <h1 style="color:midnightblue">Rotation 3</h1>
   <b>Brother GT-361</b>
-  <p>Using the Brother GT-361, I was able to make a T-shirt. To make the design for the t-shirt, I used Adobe Photoshop to cut out a picture of Tom Brady, I then copied the picture to Corel Draw and typed above Tom Brady. I saved the final design as a jpg downloaded it onto a flash drive. Next, I grabbed a blank t-shirt and heated it so it would be flat. I then put the shirt into theBrotherGT-361 and plug my flashdrive in. My t-shirt came out with my design on it.
-  <a href="
+  <p>Using the Brother GT-361, I was able to make a T-shirt. To make the design for the t-shirt, I used Adobe Photoshop to cut out a picture of Tom Brady, I then copied the picture to a blank page in Adobe Photoshop and typed above. I saved the final design as a jpg and downloaded it onto a flash drive. Next, I grabbed a blank t-shirt and heated it so it would be flat. I then put the shirt into theBrotherGT-361 and plug my flashdrive in. My t-shirt came out with my design on it. After I heated ita gain to dry the ink.
+  <a href="ella shirt.psd"> T-Shirt Design File<a/>
+    <img src="shirt1.jpg"/>
+<img src="shirt2.jpg"/>
+    <img src="shirt3.jpg"/>
+    <img src="shirt4.jpg"/>
+    <img src="ella shirt.jpg"/>
+    <b>Sublimation Printing</b>
+    <p>For my dye sublimation project, I made a dog bowl. First, I went to The Conde Dye Trans website and picked out the dog bowl that Mr. Gerber then ordered. To design my bowl, I went used Corel Draw and Adobe photoshop. First, I had to down load the dog bowl template. On my dog bowl, I wanted pictures of my dog, so I cut out their faces from pictures in photoshop and copied them to Corel Draw. I had to fill two of the templates with pictures because one only went half way around the bowl. When I finished my designs, I save them and put them on a flash drive. I walked it over to the Sawgrass 800 printer and printed out the two designs. Next, I cut them out and wrapped them around my dog bowl with heat resistant tape and a dye wrap. I needed to heat it, so I set the oven to about 400 degrees and heated it for 15 minutes. When it was finished, my design, that was on the paper, transferred to the bowl. After letting it cool, I was able to take the bowl home and feed my dogs with it.
+      <a href="ella shirt.psd"> T-Shirt Design File<a/>
