--- a/r3.html
+++ b/r3.html
@@ -7,10 +7,11 @@ h1 {font-family:times new roman;font-size:200%;text-align:center;}
   p {font-familt:times new roman;font-size:150%;text-align:center;}
   </style>
   </head>
+  <body>
   <h1 style="color:midnightblue">Rotation 3</h1>
   <b>Brother GT-361</b>
   <p>Using the Brother GT-361, I was able to make a T-shirt. To make the design for the t-shirt, I used Adobe Photoshop to cut out a picture of Tom Brady, I then copied the picture to a blank page in Adobe Photoshop and typed above. I saved the final design as a jpg and downloaded it onto a flash drive. Next, I grabbed a blank t-shirt and heated it so it would be flat. I then put the shirt into theBrotherGT-361 and plug my flashdrive in. My t-shirt came out with my design on it. After I heated ita gain to dry the ink.
-  <a href="ella shirt.psd"> T-Shirt Design File<a/>
+  <a href="ella shirt.psd">T-Shirt Design File<a/>
     <img src="shirt1.jpg"/>
 <img src="shirt2.jpg"/>
     <img src="shirt3.jpg"/>
@@ -27,3 +28,6 @@ h1 {font-family:times new roman;font-size:200%;text-align:center;}
           <img src="bowlpic5.jpg"/>
          <img src="bowlpic6.jpg"/> 
           <img src="bowlpic7.jpg"/>
+<a href="index.html">Home<a/>
+  </body>
+          </html>
