--- a/r2.html
+++ b/r2.html
@@ -14,3 +14,5 @@ h1 {font-family:times new roman;font-size:200%;text-align:center;}
   <img src="stamp4.jpg"/>
   <img src="stamp5.jpg"/>
   <img src="stamp6.jpg"/>
+</body>
+          </html>
