--- a/r9.html
+++ b/r9.html
@@ -9,3 +9,5 @@ h1 {font-family:times new roman;font-size:200%;text-align:center;}
   </head>
   <h1 style="color:midnightblue">Rotation 1</h1>
   <p>Type here</p>
+</body>
+          </html>
