--- a/me.html
+++ b/me.html
@@ -42,5 +42,5 @@ background-color:midnightblue;}
 <body>
   <h1 stlye="color:ivory;">About Me</h1>
   <h2 style="color:ivory;">Ella Siegenthaler</h2>
-  <p style="color:ivory;">My name is Ella Siegenthaler and I am a sophmore at Western Reserve Academy. I enjoy golfing and spending time with my beloved dogs, Louis and Leo. I am a supporter of the Cleveland Indians, New England Patriots, and the Boston Bruins. Thank you for taking the time to look at my website.</p>
+  <p style="color:ivory;">My name is Ella Siegenthaler and I am a sophmore at Western Reserve Academy. I enjoy golfing and spending time with my beloved dogs, Louis and Leo. I am a supporter of the Cleveland Indians, New England Patriots, and the Boston Bruins. This is my first website! Thank you for taking the time to look at my website.</p>
   </body>
