--- a/r1.html
+++ b/r1.html
@@ -8,6 +8,6 @@
   </style>
   </head>
   <h1 style="color:midnightblue">Rotation 1</h1>
-  <p>This website was the project! First, I created an account on Git Hub. I uploaded</p>
+  <p>This website was the project! First, I created an account on Git Hub. I uploaded files and pictures and linked them to specific pages.</p>
 </body>
           </html>
