--- a/r1.html
+++ b/r1.html
@@ -9,5 +9,7 @@
   </head>
   <h1 style="color:midnightblue">Rotation 1</h1>
   <p>This website was the project! First, I created an account on Git Hub. I uploaded files and pictures and linked them to specific pages.</p>
-</body>
+ <img src="r1pic.jpg"/>
+   <img src="r2pic.jpg"/>
+  </body>
           </html>
