--- a/r4.html
+++ b/r4.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Rotation 1</title>
+<title>Rotation 4</title>
 <head>
 <style>
 h1 {font-family:times new roman;font-size:200%;text-align:center;}
@@ -11,6 +11,10 @@ h1 {font-family:times new roman;font-size:200%;text-align:center;}
   <b>Making a Cardboard Box</b>
   <p>Info about vector vs rastor</p>
   <p>For the creation of my cardboard box, I first copied a box template to Corel Draw. Next, I inserted texts and images that I wanted to appear on my box's faces. I loaded the cdr file onto a flash drive and walked it out to the Epilog Laser Engraver. I put the cardboard in and adjusted the cutting preferences. My first cut was unsuccessful because the laser was dirty, which effected the magnification, so it did not cut my box out. Despite the hiccup, my next attempt was successful. I then glued the pieces of cardboard into a box form.</p>  
+   <img src="press1.jpg"/>
+  <img src="press2.jpg"/>
+  <img src="press3.jpg"/>
+  <img src="press4.jpg"/>
   <b>Press Fit Kit</b>
   <p>In creating my press fit kit, I used Corel Draw. I inserted 3 different shapes and made indents in them so that they would fit together. Next, I loaded the cdr file onto a flash drive and walked it out to the Epilog Laser Engraver. I put the cardboard in and adjusted the cutting preferences. My first cut's indents were too big. I forgot that I needed to make them smaller because the laser gets rid of a slight bit more than what you want. I then went back and made the indents smaller. I recut and they fit together perfectly!</p>
   </body>
