--- a/r4.html
+++ b/r4.html
@@ -17,5 +17,11 @@ h1 {font-family:times new roman;font-size:200%;text-align:center;}
   <img src="press4.jpg"/>
   <b>Press Fit Kit</b>
   <p>In creating my press fit kit, I used Corel Draw. I inserted 3 different shapes and made indents in them so that they would fit together. Next, I loaded the cdr file onto a flash drive and walked it out to the Epilog Laser Engraver. I put the cardboard in and adjusted the cutting preferences. My first cut's indents were too big. I forgot that I needed to make them smaller because the laser gets rid of a slight bit more than what you want. I then went back and made the indents smaller. I recut and they fit together perfectly!</p>
+  <img src="box1.jpg"/>
+  <img src="box2.jpg"/>
+  <img src="box3.jpg"/>
+  <img src="box4.jpg"/>
+  <img src="box5.jpg"/>
+  <img src="box6.jpg"/>
   </body>
           </html>
