--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <a href="r11.html">Rotation 11</a>
     <a href="r12.html">Rotation 12</a>
   </p>
- 
+ <a href="index.html">Home<a/>
   <img src="A2.jpg"/>
 </body>
 </html>
