--- a/r1.html
+++ b/r1.html
@@ -11,5 +11,6 @@
   <p>This website was the project! First, I created an account on Git Hub. I uploaded files and pictures and linked them to specific pages.</p>
  <img src="r1pic.jpg"/>
    <img src="r2pic.jpg"/>
+  <a href="index.html">Home<a/>
   </body>
           </html>
