--- a/r4.html
+++ b/r4.html
@@ -23,5 +23,6 @@ h1 {font-family:times new roman;font-size:200%;text-align:center;}
   <img src="box4.jpg"/>
   <img src="box5.jpg"/>
   <img src="box6.jpg"/>
+  <a href="index.html">Home<a/>
   </body>
           </html>
