--- a/r6.html
+++ b/r6.html
@@ -9,5 +9,6 @@ h1 {font-family:times new roman;font-size:200%;text-align:center;}
   </head>
   <h1 style="color:midnightblue">Rotation 1</h1>
   <p>Type here</p>
+  <a href="index.html">Home<a/>
 </body>
           </html>
