--- a/r3.html
+++ b/r3.html
@@ -28,6 +28,7 @@ h1 {font-family:times new roman;font-size:200%;text-align:center;}
           <img src="bowlpic5.jpg"/>
          <img src="bowlpic6.jpg"/> 
           <img src="bowlpic7.jpg"/>
+          <img src="leo.jpg"/>
 <a href="index.html">Home<a/>
   </body>
           </html>
