--- a/r4.html
+++ b/r4.html
@@ -23,6 +23,9 @@ h1 {font-family:times new roman;font-size:200%;text-align:center;}
   <img src="box4.jpg"/>
   <img src="box5.jpg"/>
   <img src="box6.jpg"/>
-  <a href="index.html">Home<a/>
+  <b>Cork Coaster</b>
+  <p>To make my JFK coaster, I first downloaded a picture of JFK. Then, I simply put in into Corel Draw, sized it, then put the file on a flashdrive. I walked over to the laser engraver, put a blank cork coaster in it, and pressed start. 
+  
+    <a href="index.html">Home<a/>
   </body>
           </html>
