--- a/r4.html
+++ b/r4.html
@@ -25,7 +25,12 @@ h1 {font-family:times new roman;font-size:200%;text-align:center;}
   <img src="box6.jpg"/>
   <b>Cork Coaster</b>
   <p>To make my JFK coaster, I first downloaded a picture of JFK. Then, I simply put in into Corel Draw, sized it, then put the file on a flashdrive. I walked over to the laser engraver, put a blank cork coaster in it, and pressed start. 
-  
+  <img src="JFK1.jpg"/>
+    <img src="JFK2.jpg"/>
+    <img src="JFK3.jpg"/>
+    <b>Water Bottle</B>
+    <p>I used Corel Draw to make my water bottle. First, I downloaded pictures of some of my favorite sharks (Bull, Great White, Goblin, Cookie Cutter, Great Hammerhead, and Lemmon), put them into Corel Draw, then wrote my name below them. I loaded the CDR onto a flash drive and put a water bottle into the laser ingraver and pressed start.
+      
     <a href="index.html">Home<a/>
   </body>
           </html>
