--- a/r4.html
+++ b/r4.html
@@ -10,7 +10,7 @@ h1 {font-family:times new roman;font-size:200%;text-align:center;}
   <h1 style="color:midnightblue">Rotation 1</h1>
   <b>Making a Cardboard Box</b>
   <p>Info about vector vs rastor</p>
-  <p>For the creation of my cardboard box, I first copied a box template to Corel Draw. Next, I inserted texts and images that I wanted to appear on my box's faces. I loaded the cdr file onto a flash drive and walked it out to the Epilog Laser Engraver. I put the cardboard in and adjusted the cutting preferences. My first cut was unsuccessful because the laser was dirty, which effected the magnification, so it did not cut my box out. Despite the hiccup, my next attempt was successful. I then glued the pieces of cardboard into a box form.</p>  
+  <p>For the creation of my cardboard box, I first copied a box template to Corel Draw. Next, I inserted texts and images that I wanted to appear on my box's faces. I loaded the cdr file onto a flash drive and walked it out to the Epilog Laser Engraver. I put the cardboard in and adjusted the cutting preferences. My first cut was unsuccessful because the laser was dirty, which effected the magnification, so it did not cut my box out. Despite the hiccup, my next attempt was successful. I then glued the pieces of cardboard into a box form. It is important to watch anything that is in the machine or else it might catch on fire.</p>  
    <img src="press1.jpg"/>
   <img src="press2.jpg"/>
   <img src="press3.jpg"/>
@@ -30,7 +30,10 @@ h1 {font-family:times new roman;font-size:200%;text-align:center;}
     <img src="JFK3.jpg"/>
     <b>Water Bottle</B>
     <p>I used Corel Draw to make my water bottle. First, I downloaded pictures of some of my favorite sharks (Bull, Great White, Goblin, Cookie Cutter, Great Hammerhead, and Lemmon), put them into Corel Draw, then wrote my name below them. I loaded the CDR onto a flash drive and put a water bottle into the laser ingraver and pressed start.
-      
-    <a href="index.html">Home<a/>
+      <img src="b1.jpg"/>
+      <img src="b2.jpg"/>
+      <img src="b3.jpg"/>
+      <img src="b4.jpg"/>
+    <a href="index.html"><Home<a/>
   </body>
           </html>
