--- a/r4.html
+++ b/r4.html
@@ -7,7 +7,7 @@ h1 {font-family:times new roman;font-size:200%;text-align:center;}
   p {font-familt:times new roman;font-size:150%;text-align:center;}
   </style>
   </head>
-  <h1 style="color:midnightblue">Rotation 1</h1>
+  <h1 style="color:midnightblue">Rotation 4</h1>
   <b>Making a Cardboard Box</b>
   <p>Info about vector vs rastor</p>
   <p>For the creation of my cardboard box, I first copied a box template to Corel Draw. Next, I inserted texts and images that I wanted to appear on my box's faces. I loaded the cdr file onto a flash drive and walked it out to the Epilog Laser Engraver. I put the cardboard in and adjusted the cutting preferences. My first cut was unsuccessful because the laser was dirty, which effected the magnification, so it did not cut my box out. Despite the hiccup, my next attempt was successful. I then glued the pieces of cardboard into a box form. It is important to watch anything that is in the machine or else it might catch on fire.</p>  
@@ -24,12 +24,12 @@ h1 {font-family:times new roman;font-size:200%;text-align:center;}
   <img src="box5.jpg"/>
   <img src="box6.jpg"/>
   <b>Cork Coaster</b>
-  <p>To make my JFK coaster, I first downloaded a picture of JFK. Then, I simply put in into Corel Draw, sized it, then put the file on a flashdrive. I walked over to the laser engraver, put a blank cork coaster in it, and pressed start. 
+  <p>To make my JFK coaster, I first downloaded a picture of JFK. Then, I simply put in into Corel Draw, sized it, then put the file on a flashdrive. I walked over to the laser engraver, put a blank cork coaster in it, and pressed start.</p>
   <img src="JFK1.jpg"/>
     <img src="JFK2.jpg"/>
     <img src="JFK3.jpg"/>
     <b>Water Bottle</B>
-    <p>I used Corel Draw to make my water bottle. First, I downloaded pictures of some of my favorite sharks (Bull, Great White, Goblin, Cookie Cutter, Great Hammerhead, and Lemmon), put them into Corel Draw, then wrote my name below them. I loaded the CDR onto a flash drive and put a water bottle into the laser ingraver and pressed start.
+    <p>I used Corel Draw to make my water bottle. First, I downloaded pictures of some of my favorite sharks (Bull, Great White, Goblin, Cookie Cutter, Great Hammerhead, and Lemmon), put them into Corel Draw, then wrote my name below them. I loaded the CDR onto a flash drive and put a water bottle into the laser ingraver and pressed start.</p>
       <img src="b1.jpg"/>
       <img src="b2.jpg"/>
       <img src="b3.jpg"/>
