--- a/r5.html
+++ b/r5.html
@@ -21,7 +21,7 @@ h1 {font-family:times new roman;font-size:200%;text-align:center;}
     <b>Additive Manufacturing</b>
   <p>For my third project, I printed a tag for my dog, Louis. I used Fusion 360 to create it.</p>
   <br>
-  <img src="head3.jpg"/>
+  <img src="tag1.jpg"/>
   <br>
   <a href="index.html">Home<a/>
 </body>
