--- a/r6.html
+++ b/r6.html
@@ -10,7 +10,10 @@ h1 {font-family:times new roman;font-size:200%;text-align:center;}
   <h1 style="color:midnightblue">Rotation 6</h1>
   <b>Printing Multicolor Stickers</b>
   <p>Using the Roland 560i, I printed two multicolor stickers. My first sticker was a sticker of my dog. I imported his image into adobe photoshop and copied it into corel draw. Around his head, I had to put a specific pink outline so that the printer knew where to cut. Next, I loaded it onto a flashdrive and printed it.</p>
-  <img src="head.jpg"/>
+  <img src="sticker1.jpg"/>
+  <img src="sticker2.jpg"/>
+  <img src="sticker3.jpg"/>
+  <br>
   <a href="index.html">Home<a/>
 </body>
           </html>
