--- a/r12.html
+++ b/r12.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html>
-<title>Rotation 1</title>
+<title>Rotation 12</title>
 <head>
 <style>
 h1 {font-family:times new roman;font-size:200%;text-align:center;}
   p {font-familt:times new roman;font-size:150%;text-align:center;}
   </style>
   </head>
-  <h1 style="color:midnightblue">Rotation 1</h1>
+  <h1 style="color:midnightblue">Rotation 12: Final Project</h1>
+  <b>Project Description</b>
   <p>Type here</p>
+  <br>
+  <b>Equiptment and Material List</b>
+  <p>Type here</p>
+  <b>Time Spent on my Project</b>
+  <p>Type here</p>
+  <b>Settings and Configurations on the machines</b>
+  <p>Type here</p>
+  <b>What I Learned From this Project</b>
+  <p>Type here</p>
+  <b>Steps</b>
 </body>
           </html>
