--- a/r12.html
+++ b/r12.html
@@ -13,12 +13,18 @@ h1 {font-family:times new roman;font-size:200%;text-align:center;}
   <br>
   <b>Equiptment and Material List</b>
   <p>Type here</p>
+  <br>
   <b>Time Spent on my Project</b>
   <p>Type here</p>
+  <br>
   <b>Settings and Configurations on the machines</b>
   <p>Type here</p>
+  <br>
   <b>What I Learned From this Project</b>
   <p>Type here</p>
+  <br>
   <b>Steps</b>
+  <p>Type here</p>
+  <br>
 </body>
           </html>
