--- a/r6.html
+++ b/r6.html
@@ -11,7 +11,14 @@ h1 {font-family:times new roman;font-size:200%;text-align:center;}
   <b>Printing Multicolor Stickers</b>
   <p>Using the Roland 560i, I printed two multicolor stickers. My first sticker was a sticker of my dog. I imported his image into adobe photoshop and copied it into corel draw. Around his head, I had to put a specific pink outline so that the printer knew where to cut. My second sticker was a picture of my uncles face. I inserted it into a circle then put the pink outline around it so it would be cut out. Next, I loaded them onto a flashdrive and printed them.</p>
   <img src="sticker3.jpg"/>
+  <img src="will2.jpg"/>
+  <img src="will1.jpg"/>
   <br>
+  <p>Using the Roland GS-24 CAMM 1, I printed two one color stickers. My first sticker was a yellow dog and the second was a pink elephant. I used Corel draw and uploaded clipart of the dog and elephant. I then printed them.</p>
+  <br>
+  <img src="will1.jpg"/>
+  <img src="will1.jpg"/>
+  <img src="will1.jpg"/>
   <a href="index.html">Home<a/>
 </body>
           </html>
