--- a/r6.html
+++ b/r6.html
@@ -16,9 +16,9 @@ h1 {font-family:times new roman;font-size:200%;text-align:center;}
   <br>
   <p>Using the Roland GS-24 CAMM 1, I printed two one color stickers. My first sticker was a yellow dog and the second was a pink elephant. I used Corel draw and uploaded clipart of the dog and elephant. I then printed them.</p>
   <br>
-  <img src="will1.jpg"/>
-  <img src="will1.jpg"/>
-  <img src="will1.jpg"/>
+  <img src="dog.jpg"/>
+  <img src="elephant.jpg"/>
+  <img src="both.jpg"/>
   <a href="index.html">Home<a/>
 </body>
           </html>
