--- a/r6.html
+++ b/r6.html
@@ -16,9 +16,19 @@ h1 {font-family:times new roman;font-size:200%;text-align:center;}
   <br>
   <p>Using the Roland GS-24 CAMM 1, I printed two one color stickers. My first sticker was a yellow dog and the second was a pink elephant. I used Corel draw and uploaded clipart of the dog and elephant. I then printed them.</p>
   <br>
+  <b>Why did I create each sticker?</b>
+    <p>I made the sticker of my dog face because I love him. I made the sticker of my uncle for my father. I made the elephant and yellow dog sticker because I like dogs and elephants.</p>
+    <b>What was the thought process while I was creating my notebook?</b>
+    <p>I put the stickers on my laptop instead of a notebook. My thought process was that I wanted to have quality stickers on my laptop.</p>
+    <b>What was the most challenging part of this process?</b>
+    <p>The most challenging part was getting the pink boarder around the images.</p>
+    <b>What did you learn in the process?</b>
+    <p>I learned how to insert images into shapes and make stickers.</p>
+  <br>
   <img src="dog.jpg"/>
   <img src="elephant.jpg"/>
   <img src="both.jpg"/>
   <a href="index.html">Home<a/>
+    <br>
 </body>
           </html>
