--- a/r6.html
+++ b/r6.html
@@ -25,6 +25,7 @@ h1 {font-family:times new roman;font-size:200%;text-align:center;}
     <b>What did you learn in the process?</b>
     <p>I learned how to insert images into shapes and make stickers.</p>
   <br>
+  <a href="will sticker.eps">Will Sticker File<a/>
   <img src="dog.jpg"/>
   <img src="elephant.jpg"/>
   <img src="both.jpg"/>
