--- a/r4.html
+++ b/r4.html
@@ -37,6 +37,7 @@ h1 {font-family:times new roman;font-size:200%;text-align:center;}
       <img src="b2.jpg"/>
       <img src="b3.jpg"/>
       <img src="b4.jpg"/>
-    <a href="index.html"><Home<a/>
+  <br>
+    <a href="index.html">Home<a/>
   </body>
           </html>
