--- a/r6.html
+++ b/r6.html
@@ -31,5 +31,13 @@ h1 {font-family:times new roman;font-size:200%;text-align:center;}
   <img src="both.jpg"/>
   <a href="index.html">Home<a/>
     <br>
+    <b>Molding From a Negative</b>
+    <p>info</p>
+    <img src="both.jpg"/>
+    <br>
+    <b>Molding and Casting Pewter</b>
+    <p>info</p>
+    <img src="both.jpg"/>
+    <br>
 </body>
           </html>
