--- a/r7.html
+++ b/r7.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
-<title>Rotation 1</title>
+<title>Rotation 7</title>
 <head>
 <style>
 h1 {font-family:times new roman;font-size:200%;text-align:center;}
   p {font-familt:times new roman;font-size:150%;text-align:center;}
   </style>
   </head>
-  <h1 style="color:midnightblue">Rotation 1</h1>
+  <h1 style="color:midnightblue">Rotation 7</h1>
+  <b>Skateboard Making Process</b>
   <p>Type here</p>
+  <br>
+  <img src="both.jpg"/>
   <a href="index.html">Home<a/>
 </body>
           </html>
