--- a/r8.html
+++ b/r8.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Rotation 1</title>
+<title>Rotation 8</title>
 <head>
 <style>
 h1 {font-family:times new roman;font-size:200%;text-align:center;}
@@ -8,6 +8,9 @@ h1 {font-family:times new roman;font-size:200%;text-align:center;}
   </style>
   </head>
   <h1 style="color:midnightblue">Rotation 1</h1>
+  <b>Soldering and Electronics</b>
   <p>Type here</p>
+  <br>
+  <img src="both.jpg"/>
 </body>
           </html>
