--- a/r9.html
+++ b/r9.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Rotation 1</title>
+<title>Rotation 9</title>
 <head>
 <style>
 h1 {font-family:times new roman;font-size:200%;text-align:center;}
@@ -8,6 +8,12 @@ h1 {font-family:times new roman;font-size:200%;text-align:center;}
   </style>
   </head>
   <h1 style="color:midnightblue">Rotation 1</h1>
+  <b>Project 1</b>
   <p>Type here</p>
+  <br>
+  <img src="both.jpg"/>
+  <br>
+  <b>Project 2</b>
+  <p>
 </body>
           </html>
