--- a/r9.html
+++ b/r9.html
@@ -14,6 +14,34 @@ h1 {font-family:times new roman;font-size:200%;text-align:center;}
   <img src="both.jpg"/>
   <br>
   <b>Project 2</b>
-  <p>
+  <p>Type Here</p>
+  <br>
+  <img src="both.jpg"/>
+  <br>
+   <b>Project 3</b>
+  <p>Type Here</p>
+  <br>
+  <img src="both.jpg"/>
+  <br>
+   <b>Project 4</b>
+  <p>Type Here</p>
+  <br>
+  <img src="both.jpg"/>
+  <br>
+   <b>Project 5</b>
+  <p>Type Here</p>
+  <br>
+  <img src="both.jpg"/>
+  <br>
+   <b>Project 6</b>
+  <p>Type Here</p>
+  <br>
+  <img src="both.jpg"/>
+  <br>
+   <b>My Own Code</b>
+  <p>Type Here</p>
+  <br>
+  <img src="both.jpg"/>
+  <br>
 </body>
           </html>
