--- a/r10.html
+++ b/r10.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Rotation 1</title>
+<title>Rotation 10</title>
 <head>
 <style>
   h1 {font-family:times new roman;font-size:200%;text-align:center;}
@@ -8,6 +8,19 @@
   </style>
   </head>
   <h1 style="color:midnightblue">Rotation 1</h1>
+  <b>My Experience with Raspberry Pi</b>
   <p>Type here</p>
+  <br>
+  <img src="both.jpg"/>
+  <br>
+   <b>What I Learned About Physical Computing</b>
+  <p>Type here</p>
+  <br>
+   <b>Why Scratch and Python are Important When Using Raspberry Pi</b>
+  <p>Type here</p>
+  <br>
+ <b>My Favorite Raspberry Pi Project</b>
+  <p>Type here</p>
+  <br>
 </body>
           </html>
