--- a/r11.html
+++ b/r11.html
@@ -10,6 +10,33 @@
   <h1 style="color:midnightblue">Rotation 1</h1>
   <b>Project Description</b>
   <p>Type here</p>
-  
+  <br>
+  <img src="site1.jpg"/>
+  <br>
+  <b>Equiptment and Materials</b>
+  <p>Type here</p>
+  <br>
+  <img src="site1.jpg"/>
+  <br>
+  <b>Time Spent</b>
+  <p>Type here</p>
+  <br>
+  <img src="site1.jpg"/>
+  <br>
+  <b>Machine Settings and Configurations</b>
+  <p>Type here</p>
+  <br>
+  <img src="site1.jpg"/>
+  <br>
+  <b>What I Learned</b>
+  <p>Type here</p>
+  <br>
+  <img src="site1.jpg"/>
+  <br>
+  <b>Steps</b>
+  <p>Type here</p>
+  <br>
+  <img src="site1.jpg"/>
+  <br>
 </body>
           </html>
