--- a/r6.html
+++ b/r6.html
@@ -26,17 +26,17 @@ h1 {font-family:times new roman;font-size:200%;text-align:center;}
     <p>I learned how to insert images into shapes and make stickers.</p>
   <br>
   <a href="will sticker.eps">Will Sticker File<a/>
+    <br>
   <img src="dog.jpg"/>
   <img src="elephant.jpg"/>
   <img src="both.jpg"/>
   <a href="index.html">Home<a/>
     <br>
     <b>Molding From a Negative</b>
-    <p>info</p>
-    <img src="both.jpg"/>
+    <p>To make my wax mold, got an image that said "Believe and turned it into a 3D image on Selva 3D. The wax was then milled out in the MDX40A. Now, my wax mold can be used as a chocolate mold.</p>
     <br>
     <b>Molding and Casting Pewter</b>
-    <p>info</p>
+    <p>For this assignment, I made an Indians pendant. First, using Corel Draw, I made my wooden molds. Using the Laser cutter, I engraved the top wooden block with a simple circle.. On the middle wood block, I cut a hole so I could pore the pewter in. The bottom block had the Cleveland Indians logo on it. After I made the wooden molds, I clamped them together and was able to pored in baby powder, so the pewter would not stick and then the pewter. When the pewter cooled, I took it out of the mold and cut off the top excess pewter, buffed it out, and drilled a hole in the top. </p>
     <img src="both.jpg"/>
     <br>
 </body>
