--- a/r6.html
+++ b/r6.html
@@ -36,8 +36,14 @@ h1 {font-family:times new roman;font-size:200%;text-align:center;}
     <p>To make my wax mold, got an image that said "Believe and turned it into a 3D image on Selva 3D. The wax was then milled out in the MDX40A. Now, my wax mold can be used as a chocolate mold.</p>
     <br>
     <b>Molding and Casting Pewter</b>
-    <p>For this assignment, I made an Indians pendant. First, using Corel Draw, I made my wooden molds. Using the Laser cutter, I engraved the top wooden block with a simple circle.. On the middle wood block, I cut a hole so I could pore the pewter in. The bottom block had the Cleveland Indians logo on it. After I made the wooden molds, I clamped them together and was able to pored in baby powder, so the pewter would not stick and then the pewter. When the pewter cooled, I took it out of the mold and cut off the top excess pewter, buffed it out, and drilled a hole in the top. </p>
-    <img src="both.jpg"/>
+    <p>For this assignment, I made an Indians pendant. First, using Corel Draw, I made my wooden molds. Using the Laser cutter, I engraved the top wooden block with a simple circle. On the middle wood block, I cut a hole so I could pore the pewter in. The bottom block had the Cleveland Indians logo on it. After I made the wooden molds, I clamped them together and was able to pored in baby powder, so the pewter would not stick and then the pewter. When the pewter cooled, I took it out of the mold and cut off the top excess pewter, buffed it out, and drilled a hole in the top. </p>
+    <img src="pewter1.jpg"/>
+    <br>
+    <img src="pewter2.jpg"/>
+    <br>
+    <img src="pewter3.jpg"/>
+    <br>
+    <img src="pewter4.jpg"/>
     <br>
 </body>
           </html>
