--- a/r7.html
+++ b/r7.html
@@ -9,9 +9,14 @@ h1 {font-family:times new roman;font-size:200%;text-align:center;}
   </head>
   <h1 style="color:midnightblue">Rotation 7</h1>
   <b>Skateboard Making Process</b>
-  <p>Type here</p>
+  <p>Step 1: Take the separate pieces of wood and glue them together with Titebond III glue. With a partner, use a roller to quickly put the glue on the separate boards and stack them ontop of each other.</p>
+  <br>
+  <p>Step 2: Put the boards in a vacuum bag with a skateboard mold. Make sure the netting is spread out and by the pump. Seal the vacuum bag with tar and pump all the air out.</p>
+  <p>Step 3: Design a vinale decal for the bottom of the board. Using Corel Draw I put images of my brother's favorite basketball players. I printed out the decal and stuck it to the board.</p>
   <br>
   <img src="both.jpg"/>
+  <img src="both.jpg"/>
+  <br>
   <a href="index.html">Home<a/>
 </body>
           </html>
