--- a/r7.html
+++ b/r7.html
@@ -14,8 +14,8 @@ h1 {font-family:times new roman;font-size:200%;text-align:center;}
   <p>Step 2: Put the boards in a vacuum bag with a skateboard mold. Make sure the netting is spread out and by the pump. Seal the vacuum bag with tar and pump all the air out.</p>
   <p>Step 3: Design a vinale decal for the bottom of the board. Using Corel Draw I put images of my brother's favorite basketball players. I printed out the decal and stuck it to the board.</p>
   <br>
-  <img src="both.jpg"/>
-  <img src="both.jpg"/>
+  <img src="board1.jpg"/>
+  <img src="board2.jpg"/>
   <br>
   <a href="index.html">Home<a/>
 </body>
