--- a/r8.html
+++ b/r8.html
@@ -9,8 +9,8 @@ h1 {font-family:times new roman;font-size:200%;text-align:center;}
   </head>
   <h1 style="color:midnightblue">Rotation 1</h1>
   <b>Soldering and Electronics</b>
-  <p>Type here</p>
+  <p>Through this assignment I learned that soldering is used to connect wires to boards so electricity can flow through. To solder, I put the necessary components on the board, then joined them by melting solder on them. My project did not work, possibly because a part of the metal was not touching the board.</p>
   <br>
-  <img src="both.jpg"/>
+  <img src="ella shirt.jpg"/>
 </body>
           </html>
