--- a/r9.html
+++ b/r9.html
@@ -9,39 +9,39 @@ h1 {font-family:times new roman;font-size:200%;text-align:center;}
   </head>
   <h1 style="color:midnightblue">Rotation 1</h1>
   <b>Project 1</b>
-  <p>Type here</p>
+  <p>This project made the light illuminate.</p>
   <br>
-  <img src="both.jpg"/>
+  <img src="arduino1.jpg"/>
   <br>
   <b>Project 2</b>
-  <p>Type Here</p>
+  <p>This project made the lights blink in a row.</p>
   <br>
-  <img src="both.jpg"/>
+  <img src="arduino2.jpg"/>
   <br>
    <b>Project 3</b>
-  <p>Type Here</p>
+  <p>This project showed the change in temperature every second.</p>
   <br>
-  <img src="both.jpg"/>
+  <img src="arduino9.jpg"/>
   <br>
    <b>Project 4</b>
-  <p>Type Here</p>
+  <p>This project made the light blink</p>
   <br>
-  <img src="both.jpg"/>
+  <img src="arduino5.jpg"/>
   <br>
    <b>Project 5</b>
-  <p>Type Here</p>
+  <p>This project made a motor turn.</p>
   <br>
-  <img src="both.jpg"/>
+  <img src="arduino3.jpg"/>
   <br>
    <b>Project 6</b>
-  <p>Type Here</p>
+  <p>This project had a speaker that made a sound.</p>
   <br>
-  <img src="both.jpg"/>
+  <img src="arduino8.jpg"/>
   <br>
    <b>My Own Code</b>
-  <p>Type Here</p>
+  <p>I changed the sleep time to make it less so the light was on for longer than it was off when it blinked.</p>
   <br>
-  <img src="both.jpg"/>
+  <img src="arduino7.jpg"/>
   <br>
 </body>
           </html>
