--- a/r10.html
+++ b/r10.html
@@ -9,18 +9,17 @@
   </head>
   <h1 style="color:midnightblue">Rotation 1</h1>
   <b>My Experience with Raspberry Pi</b>
-  <p>Type here</p>
-  <br>
-  <img src="both.jpg"/>
+  <p>Raspberry Pis are small, single board computers. First, we inserted SD cards into the pi, then hooked it up to the computer, plugging in the mouse and keyboard. Using the programs Scratch and Python, we illuminated lights, took pictures, ect. I really liked using raspberry pi because I became more interested in technology after using it.</p>
   <br>
    <b>What I Learned About Physical Computing</b>
-  <p>Type here</p>
+  <p>I learned more about coding and about computer systems.</p>
   <br>
    <b>Why Scratch and Python are Important When Using Raspberry Pi</b>
-  <p>Type here</p>
+  <p>Scratch and Python are important while using Raspberry Pi because they are how you program the board. Scratch was much simpler than phython because you could just drag and drop components to create the code. Python was more complex becuase you have to write your own code.</p>
   <br>
  <b>My Favorite Raspberry Pi Project</b>
-  <p>Type here</p>
+  <p>My favorite project was making an emoji. I made the US Flag because America is my favorite place in the whole world and it looked wicked cool.</p>
   <br>
+  <img src="both.jpg"/>
 </body>
           </html>
